--- a/src/app/pages/coordinates/coordinates.css
+++ b/src/app/pages/coordinates/coordinates.css
@@ -4,3 +4,19 @@
     border-radius: 25px;
     overflow: hidden;
   }
+  
+
+  .marker{
+    background-image: url('https://i.imgur.com/cIooqnp.png');
+    background-size: cover;
+    width: 36px;
+    height: 36px;
+    background-color: yellow;
+    border-radius:18px;
+    border: solid 3px darkslategray;
+  }
+
+  .cordinateItem{
+    padding: 5px 5px;
+    
+  }
