--- a/src/app/pages/coordinates/coordinates.css
+++ b/src/app/pages/coordinates/coordinates.css
@@ -7,13 +7,13 @@
   
 
   .marker{
-    background-image: url('https://i.imgur.com/cIooqnp.png');
+    background-image: url('cordinate.png');
     background-size: cover;
-    width: 36px;
-    height: 36px;
-    background-color: yellow;
+    width: 28px;
+    height: 28px;
     border-radius:18px;
-    border: solid 3px darkslategray;
+    border: solid 1px #eee;
+    
   }
 
   .cordinateItem{
