--- a/src/app/pages/journeytime/journeytime.css
+++ b/src/app/pages/journeytime/journeytime.css
@@ -1,6 +1,40 @@
 .mapDiv{
-    width: 100%;
-    height: 500px;
-    border-radius: 25px;
-    overflow: hidden;
-  }
+  width: 100%;
+  height: 500px;
+  border-radius: 25px;
+  overflow: hidden;
+}
+
+
+.marker{
+  background-image: url('cordinate.png');
+  background-size: cover;
+  width: 28px;
+  height: 28px;
+  border-radius:18px;
+  border: solid 1px #eee;
+
+}
+
+
+.start-marker{
+  background-image: url('cordinate.png');
+  background-size: cover;
+  width: 32px;
+  height: 32px;
+  border-radius:18px;
+  border: solid 1px #eee;
+
+  border: solid 3px rgb(0, 235, 90);
+}
+
+
+.end-marker{
+  background-image: url('cordinate.png');
+  background-size: cover;
+  width: 32px;
+  height: 32px;
+  border-radius:18px;
+  border: solid 3px rgb(235, 102, 0);
+
+}
