--- a/src/app/pages/journeytime/journeytime.css
+++ b/src/app/pages/journeytime/journeytime.css
@@ -23,18 +23,22 @@
   width: 32px;
   height: 32px;
   border-radius:18px;
-  border: solid 1px #eee;
-
+ 
+  background-color: rgba(8, 177, 220, 0.5);
   border: solid 3px rgb(0, 235, 90);
 }
 
 
 .end-marker{
-  background-image: url('cordinate.png');
+
   background-size: cover;
   width: 32px;
   height: 32px;
   border-radius:18px;
+  background-color: rgba(8, 177, 220, 0.5);
   border: solid 3px rgb(235, 102, 0);
+
+  background-image: url('cordinate.png');
+
 
 }
