--- a/src/app/pages/coordinates/coordinates.css
+++ b/src/app/pages/coordinates/coordinates.css
@@ -12,7 +12,9 @@
     width: 28px;
     height: 28px;
     border-radius:18px;
-    border: solid 1px #eee;
+    border: solid 2px rgb(0, 126, 235);
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     
   }
 
@@ -21,6 +23,16 @@
     
   }
 
+  .displayMarker{
+    background-image: url('cordinate.png');
+    background-size: cover;
+    width: 28px;
+    height: 28px;
+    border-radius:18px;
+    border: solid 2px rgb(0, 126, 235);
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
   .camera-view{
     border-radius:5px;
     max-width: 90px;
@@ -31,10 +43,32 @@
   .imageDisplay{
     border-radius:15px;
     z-index: 1;
+    max-width: 100%;
   }
 
   .imageClose{
     margin-bottom: -15px;
     cursor: pointer;
     z-index:999;
+  }
+
+  .tt-icon-number {
+    background-image: url('cordinate.png');
+    background-size: cover;
+    width: 28px;
+    height: 28px;
+    border-radius:18px;
+    border: solid 2px rgb(0, 126, 235);
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  }
+
+  .tt-icon-text{
+    margin-bottom: 50px;
+    color:#000;
+    width: 400px;
+    font-weight: 600;
+    font-size: 14px;
+
+    border-radius: 3px;
   }
