--- a/src/app/pages/journeytime/journeytime.css
+++ b/src/app/pages/journeytime/journeytime.css
@@ -59,6 +59,6 @@
   width: 28px;
   height: 28px;
   border-radius:18px;
-  border: solid 1px #eee;
+  border: solid 1px rgba(0,150,250, 0.9);
  
 }
