--- a/src/app/pages/journeytime/journeytime.css
+++ b/src/app/pages/journeytime/journeytime.css
@@ -1,6 +1,6 @@
 .mapDiv{
   width: 100%;
-  height: 500px;
+  height: 800px;
   border-radius: 25px;
   overflow: hidden;
 }
@@ -9,8 +9,9 @@
 .marker{
   background-image: url('cordinate.png');
   background-size: cover;
-  width: 24px;
-  height: 24px;
+  width: 10px;
+  height: 10px;
+  opacity: 0.1;
   border-radius:18px;
   border: solid 1px #eee;
 
@@ -56,8 +57,8 @@
   justify-content: center;
   margin-right: 14px;
   padding: 8px;
-  width: 28px;
-  height: 28px;
+  width: 14px;
+  height: 14px;
   border-radius:18px;
   border: solid 1px rgba(0,150,250, 0.9);
  
